package com.ab.adapter.classadapter;

/**
 * @author ab
 * @description
 * @date
 * 适配接口
 */
public interface IVoltage5V {
    public int output5V();
}
